--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -4,19 +4,30 @@
 {% block content %}
     {% for post in posts %}
         <article class="media content-section">
+            <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
             <div class="media-body">
                 <div class="article-metadata">
                     <a class="mr-2" href="#">{{ post.author }}</a>
-                    <small class="text-muted">{{ post.date_posted|date:"Y M d" }}</small>
+                    <small class="text-muted">{{ post.date_posted|date:"d M Y" }}</small>
                 </div>
-                <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
+                <h3><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h3>
                 <p class="article-content">{{ post.content }}</p>
                 {% if post.image %}
                     <img src="{% static post.image.image.url %}" alt="{{ image.alt_text }}">
                     <h3>There should be an image here</h3>
                 {% endif %}
-
             </div>
         </article>
     {% endfor %}
+
+    {% if user.is_authenticated %}
+    <button class="btn btn-primary" onclick="goToLink()">New Post</button>
+    <div></div>
+
+    <script>
+        function goToLink() {window.location.href = "{% url 'post-create' %}";}
+    </script>
+    {% endif %}
+
+
 {% endblock content %}
