--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -10,10 +10,15 @@
             </div>
             <h2 class="article-title">{{ object.title }}</h2>
             <p class="article-content">{{ object.content }}</p>
+            {% if object.image %}
+                <img src="{{ post.image.url }}" alt="{{ image.alt_text }}">
+            {% endif %}
+            <div><br></div>
+            <a href="{% url 'blog-home' %}" class="btn btn-success" >Home</a>
             <button class="btn btn-warning" onclick="updatePost()">Update Post</button>
             <button class="btn btn-danger" onclick="deletePost()">Delete Post</button>
             <div></div>
-        
+
             <script>
                 function updatePost() {window.location.href = "{% url 'post-update' object.id %}";}
                 function deletePost() {window.location.href = "{% url 'post-delete' object.id %}";}
